--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap");
@@ -19,7 +23,7 @@
   </head>
   <body>
     <!-- Header-->
-    <header>
+    <header class="page-header container">
       <a href="index.html" class="logo-link"
         ><span class="logo-web">WEB</span
         ><span class="logo-studio">STUDIO</span></a
@@ -36,16 +40,14 @@
         </ul>
       </nav>
       <address class="address-menu">
-        <ul>
+        <ul class="address-menu-list">
           <li class="list-item">
             <a href="mailto:info@devstudio.com" class="contmail"
               >info@devstudio.com</a
             >
           </li>
           <li class="list-item">
-            <a href="tel:+11(000)1111111" class="contnumb"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+11(000)1111111" class="contnumb">+11(000)111-11-11</a>
           </li>
         </ul>
       </address>
@@ -53,14 +55,16 @@
 
     <!-- Main section -->
     <main>
-      <section class="hero-section">
+      <section class="container section hero-section">
         <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
-        <button type="button" class="button-order">Order Service</button>
+        <div class="div-order">
+          <button type="button" class="button-order">Order&nbspService</button>
+        </div>
       </section>
 
       <!-- Section About us -->
-      <section class="values-section">
-        <h2 hidden>Our values</h2>
+      <section class="container section values-section">
+        <h2 class="visually-hidden">Our values</h2>
         <ul class="values-list">
           <li class="list-item">
             <h3 class="h3-values">Strategy</h3>
@@ -93,7 +97,7 @@
         </ul>
       </section>
       <!-- Section What are we doing -->
-      <section class="doing-section">
+      <section class="container section doing-section">
         <h2 class="h2-studio">What are we doing</h2>
         <ul class="doing-list">
           <li class="list-item">
@@ -123,7 +127,7 @@
         </ul>
       </section>
       <!-- Section Our Team -->
-      <section class="our-team-section">
+      <section class="container section our-team-section">
         <h2 class="h2-studio">Our Team</h2>
         <ul class="our-team-list">
           <li class="list-item">
@@ -170,15 +174,18 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-menu">
-      <a href="index.html" class="logo-link">
-        <span class="logo-web">WEB</span
-        ><span class="logo-studio-footer">STUDIO</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer-menu container">
+      <div class="footer-div">
+        <a href="index.html" class="logo-link">
+          <span class="logo-web">WEB</span
+          ><span class="logo-studio-footer">STUDIO</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
