--- a/portfolio.html
+++ b/portfolio.html
@@ -5,19 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap");
     </style>
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header-->
-    <header>
+    <header class="page-header container">
       <a href="index.html" class="logo-link"
         ><span class="logo-web">WEB</span
         ><span class="logo-studio">STUDIO</span></a
@@ -34,29 +39,27 @@
         </ul>
       </nav>
       <address class="address-menu">
-        <ul>
+        <ul class="address-menu-list">
           <li class="list-item">
             <a href="mailto:info@devstudio.com" class="contmail"
               >info@devstudio.com</a
             >
           </li>
           <li class="list-item">
-            <a href="tel:+11(000)1111111" class="contnumb"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+11(000)1111111" class="contnumb">+11(000)111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section class="section-our-works">
-        <div class="buttons">
+      <section class="container section section-our-works">
+        <div class="buttons-div">
           <ul class="buttons-list">
             <li class="list-item">
               <button type="button" class="button-portfolio">All</button>
             </li>
             <li class="list-item">
-              <button type="button" class="button-portfolio">Web Site</button>
+              <button type="button" class="button-portfolio">Web&nbspSite</button>
             </li>
             <li class="list-item">
               <button type="button" class="button-portfolio">App</button>
@@ -147,15 +150,18 @@
       </section>
 
       <!-- Footer -->
-      <footer class="footer-menu">
-        <a href="index.html" class="logo-link">
-          <span class="logo-web">WEB</span
-          ><span class="logo-studio-footer">STUDIO</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
+      <footer class="footer-menu container">
+        <div class="footer-div">
+          <a href="index.html" class="logo-link">
+            <span class="logo-web">WEB</span
+            ><span class="logo-studio-footer">STUDIO</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and <br />
+            sales for your business with digital <br />
+            marketing & growth solutions.
+          </p>
+        </div>
       </footer>
     </main>
   </body>
