--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="container section hero-section">
         <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
         <div class="div-order">
-          <button type="button" class="button-order">Order&nbspService</button>
+          <button type="button" class="button-order">Order&nbsp;Service</button>
         </div>
       </section>
 
