--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,9 @@
               <button type="button" class="button-portfolio">All</button>
             </li>
             <li class="list-item">
-              <button type="button" class="button-portfolio">Web&nbspSite</button>
+              <button type="button" class="button-portfolio">
+                Web&nbsp;Site
+              </button>
             </li>
             <li class="list-item">
               <button type="button" class="button-portfolio">App</button>
