--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
           </li>
           <li class="list-item">
             <img src="./img/img2.jpg" alt="PayPal" width="360" height="300" />
-            <h2>Cashless Payment</h2>
+            <h2 class="h2-portfolio">Cashless Payment</h2>
             <p class="p-worklist">Marketing</p>
           </li>
           <li class="list-item">
