--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
               width="264"
               height="260"
             />
-            <h3 class="h3-studio">Mark Guerrero</h3>
-            <p class="our-team-p">Product Designer</p>
+            <h3 class="h3-studio">Mark&nbsp;Guerrero</h3>
+            <p class="our-team-p">Product&nbsp;Designer</p>
           </li>
           <li class="list-item">
             <img
@@ -147,8 +147,8 @@
               width="264"
               height="260"
             />
-            <h3 class="h3-studio">Tom Ford</h3>
-            <p class="our-team-p">Frontend Developer</p>
+            <h3 class="h3-studio">Tom&nbsp;Ford</h3>
+            <p class="our-team-p">Frontend&nbsp;Developer</p>
           </li>
           <li class="list-item">
             <img
@@ -157,7 +157,7 @@
               width="264"
               height="260"
             />
-            <h3 class="h3-studio">Camila Garcia</h3>
+            <h3 class="h3-studio">Camila&nbsp;Garcia</h3>
             <p class="our-team-p">Marketing</p>
           </li>
           <li class="list-item">
@@ -167,8 +167,8 @@
               width="264"
               height="260"
             />
-            <h3 class="h3-studio">Daniel Wilson</h3>
-            <p class="our-team-p">UI Designer</p>
+            <h3 class="h3-studio">Daniel&nbsp;Wilson</h3>
+            <p class="our-team-p">UI&nbsp;Designer</p>
           </li>
         </ul>
       </section>
