--- a/portfolio.html
+++ b/portfolio.html
@@ -85,13 +85,17 @@
               width="360"
               height="300"
             />
-            <h2 class="h2-portfolio">Banking App Interface Concept</h2>
-            <p class="p-worklist">App</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Banking App Interface Concept</h2>
+              <p class="p-worklist">App</p>
+            </div>
           </li>
           <li class="list-item">
             <img src="./img/img2.jpg" alt="PayPal" width="360" height="300" />
-            <h2 class="h2-portfolio">Cashless Payment</h2>
-            <p class="p-worklist">Marketing</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Cashless Payment</h2>
+              <p class="p-worklist">Marketing</p>
+            </div>
           </li>
           <li class="list-item">
             <img
@@ -100,8 +104,10 @@
               width="360"
               height="300"
             />
-            <h2 class="h2-portfolio">Meditaion App</h2>
-            <p class="p-worklist">App</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Meditaion App</h2>
+              <p class="p-worklist">App</p>
+            </div>
           </li>
           <li class="list-item">
             <img
@@ -110,23 +116,31 @@
               width="360"
               height="300"
             />
-            <h2 class="h2-portfolio">Taxi Service</h2>
-            <p class="p-worklist">Marketing</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Taxi Service</h2>
+              <p class="p-worklist">Marketing</p>
+            </div>
           </li>
           <li class="list-item">
             <img src="./img/img5.jpg" alt="Phone" width="360" height="300" />
-            <h2 class="h2-portfolio">Screen Illustrations</h2>
-            <p class="p-worklist">Design</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Screen Illustrations</h2>
+              <p class="p-worklist">Design</p>
+            </div>
           </li>
           <li class="list-item">
             <img src="./img/img6.jpg" alt="Girl" width="360" height="300" />
-            <h2 class="h2-portfolio">Online Courses</h2>
-            <p class="p-worklist">Marketing</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Online Courses</h2>
+              <p class="p-worklist">Marketing</p>
+            </div>
           </li>
           <li class="list-item">
             <img src="./img/img7.jpg" alt="Designer" width="360" height="300" />
-            <h2 class="h2-portfolio">Instagram Stories Concept</h2>
-            <p class="p-worklist">Design</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Instagram Stories Concept</h2>
+              <p class="p-worklist">Design</p>
+            </div>
           </li>
           <li class="list-item">
             <img
@@ -135,8 +149,10 @@
               width="360"
               height="300"
             />
-            <h2 class="h2-portfolio">Organic Food</h2>
-            <p class="p-worklist">Web Site</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Organic Food</h2>
+              <p class="p-worklist">Web Site</p>
+            </div>
           </li>
           <li class="list-item">
             <img
@@ -145,8 +161,10 @@
               width="360"
               height="300"
             />
-            <h2 class="h2-portfolio">Fresh Coffee</h2>
-            <p class="p-worklist">Web Site</p>
+            <div class="portfolio-card-content">
+              <h2 class="h2-portfolio">Fresh Coffee</h2>
+              <p class="p-worklist">Web Site</p>
+            </div>
           </li>
         </ul>
       </section>
