--- a/portfolio.html
+++ b/portfolio.html
@@ -170,8 +170,8 @@
       </section>
 
       <!-- Footer -->
-      <footer class="footer-menu container">
-        <div class="footer-div">
+      <footer class="footer-menu">
+        <div class="container">
           <a href="index.html" class="logo-link">
             <span class="logo-web">WEB</span
             ><span class="logo-studio-footer">STUDIO</span></a
