--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
 
     <!-- Main section -->
     <main>
-      <section class="container section hero-section">
+      <section class="container hero-section">
         <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
-        <div class="div-order">
-          <button type="button" class="button-order">Order&nbsp;Service</button>
-        </div>
+
+        <button type="button" class="button-order">Order&nbsp;Service</button>
       </section>
 
       <!-- Section About us -->
@@ -98,7 +97,7 @@
       </section>
       <!-- Section What are we doing -->
       <section class="container section doing-section">
-        <h2 class="h2-studio">What are we doing</h2>
+        <h2 class="title-studio">What are we doing</h2>
         <ul class="doing-list">
           <li class="list-item">
             <img
@@ -128,7 +127,7 @@
       </section>
       <!-- Section Our Team -->
       <section class="container section our-team-section">
-        <h2 class="h2-studio">Our Team</h2>
+        <h2 class="title-studio">Our Team</h2>
         <ul class="our-team-list">
           <li class="list-item">
             <img
@@ -137,8 +136,10 @@
               width="264"
               height="260"
             />
-            <h3 class="h3-studio">Mark&nbsp;Guerrero</h3>
-            <p class="our-team-p">Product&nbsp;Designer</p>
+            <div class="text-under-team-list">
+              <h3 class="h3-studio">Mark&nbsp;Guerrero</h3>
+              <p class="our-team-p">Product&nbsp;Designer</p>
+            </div>
           </li>
           <li class="list-item">
             <img
@@ -147,8 +148,10 @@
               width="264"
               height="260"
             />
-            <h3 class="h3-studio">Tom&nbsp;Ford</h3>
-            <p class="our-team-p">Frontend&nbsp;Developer</p>
+            <div class="text-under-team-list">
+              <h3 class="h3-studio">Tom&nbsp;Ford</h3>
+              <p class="our-team-p">Frontend&nbsp;Developer</p>
+            </div>
           </li>
           <li class="list-item">
             <img
@@ -157,8 +160,10 @@
               width="264"
               height="260"
             />
-            <h3 class="h3-studio">Camila&nbsp;Garcia</h3>
-            <p class="our-team-p">Marketing</p>
+            <div class="text-under-team-list">
+              <h3 class="h3-studio">Camila&nbsp;Garcia</h3>
+              <p class="our-team-p">Marketing</p>
+            </div>
           </li>
           <li class="list-item">
             <img
@@ -167,15 +172,17 @@
               width="264"
               height="260"
             />
-            <h3 class="h3-studio">Daniel&nbsp;Wilson</h3>
-            <p class="our-team-p">UI&nbsp;Designer</p>
+            <div class="text-under-team-list">
+              <h3 class="h3-studio">Daniel&nbsp;Wilson</h3>
+              <p class="our-team-p">UI&nbsp;Designer</p>
+            </div>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-menu container">
-      <div class="footer-div">
+    <footer class="footer-menu">
+      <div class="container">
         <a href="index.html" class="logo-link">
           <span class="logo-web">WEB</span
           ><span class="logo-studio-footer">STUDIO</span></a
