--- a/portfolio.html
+++ b/portfolio.html
@@ -22,151 +22,164 @@
   </head>
   <body>
     <!-- Header-->
-    <header class="page-header container">
-      <a href="index.html" class="logo-link"
-        ><span class="logo-web">WEB</span
-        ><span class="logo-studio">STUDIO</span></a
-      >
-      <nav class="nav-menu">
-        <ul class="nav-menu-list">
-          <li class="list-item">
-            <a class="navi-link" href="./index.html">Studio</a>
-          </li>
-          <li class="list-item">
-            <a class="navi-link current" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="list-item"><a class="navi-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address-menu">
-        <ul class="address-menu-list">
-          <li class="list-item">
-            <a href="mailto:info@devstudio.com" class="contmail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="list-item">
-            <a href="tel:+11(000)1111111" class="contnumb">+11(000)111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="container">
+        <a href="index.html" class="logo-link"
+          ><span class="logo-web">WEB</span
+          ><span class="logo-studio">STUDIO</span></a
+        >
+        <nav class="nav-menu">
+          <ul class="nav-menu-list">
+            <li class="list-item">
+              <a class="navi-link" href="./index.html">Studio</a>
+            </li>
+            <li class="list-item">
+              <a class="navi-link current" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="list-item"><a class="navi-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address-menu">
+          <ul class="address-menu-list">
+            <li class="list-item">
+              <a href="mailto:info@devstudio.com" class="contmail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="list-item">
+              <a href="tel:+11(000)1111111" class="contnumb"
+                >+11(000)111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="container section section-our-works">
-        <div class="buttons-div">
-          <ul class="buttons-list">
+      <section class="section section-our-works">
+        <div class="container">
+          <div class="buttons-div">
+            <ul class="buttons-list">
+              <li class="list-item">
+                <button type="button" class="button-portfolio">All</button>
+              </li>
+              <li class="list-item">
+                <button type="button" class="button-portfolio">
+                  Web&nbsp;Site
+                </button>
+              </li>
+              <li class="list-item">
+                <button type="button" class="button-portfolio">App</button>
+              </li>
+              <li class="list-item">
+                <button type="button" class="button-portfolio">Design</button>
+              </li>
+              <li class="list-item">
+                <button type="button" class="button-portfolio">
+                  Marketing
+                </button>
+              </li>
+            </ul>
+          </div>
+          <h1 hidden>Our Works</h1>
+          <!-- Section 1 -->
+
+          <ul class="our-works-list">
             <li class="list-item">
-              <button type="button" class="button-portfolio">All</button>
+              <img
+                src="./img/img1.jpg"
+                alt="Online Banking"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Banking App Interface Concept</h2>
+                <p class="p-worklist">App</p>
+              </div>
             </li>
             <li class="list-item">
-              <button type="button" class="button-portfolio">
-                Web&nbsp;Site
-              </button>
+              <img src="./img/img2.jpg" alt="PayPal" width="360" height="300" />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Cashless Payment</h2>
+                <p class="p-worklist">Marketing</p>
+              </div>
             </li>
             <li class="list-item">
-              <button type="button" class="button-portfolio">App</button>
+              <img
+                src="./img/img3.jpg"
+                alt="Noutbook and Phone"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Meditaion App</h2>
+                <p class="p-worklist">App</p>
+              </div>
             </li>
             <li class="list-item">
-              <button type="button" class="button-portfolio">Design</button>
+              <img
+                src="./img/img4.jpg"
+                alt="Cardriver"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Taxi Service</h2>
+                <p class="p-worklist">Marketing</p>
+              </div>
             </li>
             <li class="list-item">
-              <button type="button" class="button-portfolio">Marketing</button>
+              <img src="./img/img5.jpg" alt="Phone" width="360" height="300" />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Screen Illustrations</h2>
+                <p class="p-worklist">Design</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img src="./img/img6.jpg" alt="Girl" width="360" height="300" />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Online Courses</h2>
+                <p class="p-worklist">Marketing</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                src="./img/img7.jpg"
+                alt="Designer"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Instagram Stories Concept</h2>
+                <p class="p-worklist">Design</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                src="./img/img8.jpg"
+                alt="Fresh food"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Organic Food</h2>
+                <p class="p-worklist">Web Site</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                src="./img/img9.jpg"
+                alt="Coffe whith milk"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-content">
+                <h2 class="h2-portfolio">Fresh Coffee</h2>
+                <p class="p-worklist">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
-        <h1 hidden>Our Works</h1>
-        <!-- Section 1 -->
-
-        <ul class="our-works-list">
-          <li class="list-item">
-            <img
-              src="./img/img1.jpg"
-              alt="Online Banking"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Banking App Interface Concept</h2>
-              <p class="p-worklist">App</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img src="./img/img2.jpg" alt="PayPal" width="360" height="300" />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Cashless Payment</h2>
-              <p class="p-worklist">Marketing</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/img3.jpg"
-              alt="Noutbook and Phone"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Meditaion App</h2>
-              <p class="p-worklist">App</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/img4.jpg"
-              alt="Cardriver"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Taxi Service</h2>
-              <p class="p-worklist">Marketing</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img src="./img/img5.jpg" alt="Phone" width="360" height="300" />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Screen Illustrations</h2>
-              <p class="p-worklist">Design</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img src="./img/img6.jpg" alt="Girl" width="360" height="300" />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Online Courses</h2>
-              <p class="p-worklist">Marketing</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img src="./img/img7.jpg" alt="Designer" width="360" height="300" />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Instagram Stories Concept</h2>
-              <p class="p-worklist">Design</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/img8.jpg"
-              alt="Fresh food"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Organic Food</h2>
-              <p class="p-worklist">Web Site</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/img9.jpg"
-              alt="Coffe whith milk"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-content">
-              <h2 class="h2-portfolio">Fresh Coffee</h2>
-              <p class="p-worklist">Web Site</p>
-            </div>
-          </li>
-        </ul>
       </section>
 
       <!-- Footer -->
