--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
   </head>
   <body>
     <!-- Header-->
-    <header class="page-header container">
-      <a href="index.html" class="logo-link"
+    <header class="page-header">
+      <div class="container">
+        <a href="index.html" class="logo-link"
         ><span class="logo-web">WEB</span
         ><span class="logo-studio">STUDIO</span></a
       >
@@ -51,133 +52,142 @@
           </li>
         </ul>
       </address>
+      </div>
     </header>
 
     <!-- Main section -->
     <main>
-      <section class="container hero-section">
-        <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
+      <section class="hero-section">
+        <div class="container">
+          <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
 
         <button type="button" class="button-order">Order&nbsp;Service</button>
+        </div>
       </section>
 
       <!-- Section About us -->
-      <section class="container section values-section">
-        <h2 class="visually-hidden">Our values</h2>
-        <ul class="values-list">
-          <li class="list-item">
-            <h3 class="h3-values">Strategy</h3>
-            <p class="p-aboutus">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="list-item">
-            <h3 class="h3-values">Punctuality</h3>
-            <p class="p-aboutus">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="list-item">
-            <h3 class="h3-values">Diligence</h3>
-            <p class="p-aboutus">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="list-item">
-            <h3 class="h3-values">Technologies</h3>
-            <p class="p-aboutus">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section values-section">
+        <div class="container">
+          <h2 class="visually-hidden">Our values</h2>
+          <ul class="values-list">
+            <li class="list-item">
+              <h3 class="h3-values">Strategy</h3>
+              <p class="p-aboutus">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="h3-values">Punctuality</h3>
+              <p class="p-aboutus">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="h3-values">Diligence</h3>
+              <p class="p-aboutus">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="h3-values">Technologies</h3>
+              <p class="p-aboutus">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section What are we doing -->
-      <section class="container section doing-section">
-        <h2 class="title-studio">What are we doing</h2>
-        <ul class="doing-list">
-          <li class="list-item">
-            <img
-              src="./img/monitor.jpg"
-              alt="imagedesktopapp"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/4phone.jpg"
-              alt="imagemoblieapp"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/noutbokandphone.jpg"
-              alt="imagedesktopandmobileapp"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="section doing-section">
+        <div class="container">
+          <h2 class="title-studio">What are we doing</h2>
+          <ul class="doing-list">
+            <li class="list-item">
+              <img
+                src="./img/monitor.jpg"
+                alt="imagedesktopapp"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="list-item">
+              <img
+                src="./img/4phone.jpg"
+                alt="imagemoblieapp"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="list-item">
+              <img
+                src="./img/noutbokandphone.jpg"
+                alt="imagedesktopandmobileapp"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section Our Team -->
-      <section class="container section our-team-section">
-        <h2 class="title-studio">Our Team</h2>
-        <ul class="our-team-list">
-          <li class="list-item">
-            <img
-              src="./img/mark.jpg"
-              alt="Mark's photo"
-              width="264"
-              height="260"
-            />
-            <div class="text-under-team-list">
-              <h3 class="h3-studio">Mark&nbsp;Guerrero</h3>
-              <p class="our-team-p">Product&nbsp;Designer</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/tom.jpg"
-              alt="Tom's photo"
-              width="264"
-              height="260"
-            />
-            <div class="text-under-team-list">
-              <h3 class="h3-studio">Tom&nbsp;Ford</h3>
-              <p class="our-team-p">Frontend&nbsp;Developer</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/camila.jpg"
-              alt="Camila's photo"
-              width="264"
-              height="260"
-            />
-            <div class="text-under-team-list">
-              <h3 class="h3-studio">Camila&nbsp;Garcia</h3>
-              <p class="our-team-p">Marketing</p>
-            </div>
-          </li>
-          <li class="list-item">
-            <img
-              src="./img/deniel.jpg"
-              alt="Daniel's photo"
-              width="264"
-              height="260"
-            />
-            <div class="text-under-team-list">
-              <h3 class="h3-studio">Daniel&nbsp;Wilson</h3>
-              <p class="our-team-p">UI&nbsp;Designer</p>
-            </div>
-          </li>
-        </ul>
+      <section class="section our-team-section">
+        <div class="container">
+          <h2 class="title-studio">Our Team</h2>
+          <ul class="our-team-list">
+            <li class="list-item">
+              <img
+                src="./img/mark.jpg"
+                alt="Mark's photo"
+                width="264"
+                height="260"
+              />
+              <div class="text-under-team-list">
+                <h3 class="h3-studio">Mark&nbsp;Guerrero</h3>
+                <p class="our-team-p">Product&nbsp;Designer</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                src="./img/tom.jpg"
+                alt="Tom's photo"
+                width="264"
+                height="260"
+              />
+              <div class="text-under-team-list">
+                <h3 class="h3-studio">Tom&nbsp;Ford</h3>
+                <p class="our-team-p">Frontend&nbsp;Developer</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                src="./img/camila.jpg"
+                alt="Camila's photo"
+                width="264"
+                height="260"
+              />
+              <div class="text-under-team-list">
+                <h3 class="h3-studio">Camila&nbsp;Garcia</h3>
+                <p class="our-team-p">Marketing</p>
+              </div>
+            </li>
+            <li class="list-item">
+              <img
+                src="./img/deniel.jpg"
+                alt="Daniel's photo"
+                width="264"
+                height="260"
+              />
+              <div class="text-under-team-list">
+                <h3 class="h3-studio">Daniel&nbsp;Wilson</h3>
+                <p class="our-team-p">UI&nbsp;Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
